# touchdesigner-mcp

./: .gitignore  README.md  install.ps1  install.sh  pyproject.toml  setup_mcp_in_td.py
npm/: README.md  package.json  run.js
skills/tdpilot-core/: SKILL.md
src/td_mcp/: __init__.py  __main__.py  models.py  server.py  td_client.py
td_component/: mcp_server.tox  mcp_webserver_callbacks.py
